--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Upgrade chrome driver
       run: php artisan dusk:chrome-driver
     - name: Start Chrome Driver
-      run: ./vendor/laravel/dusk/bin/chromedriver-linux --headless --no-sandbox > /dev/null 2>&1 &
+      run: ./vendor/laravel/dusk/bin/chromedriver-linux --headless --no-sandbox --disable-extensions --disable-dev-shm-usage > /dev/null 2>&1 &
     - name: Run Laravel Server
       run: php artisan serve > /dev/null 2>&1 &
     - name: Directory Permissions
