--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -13,12 +13,6 @@ jobs:
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
     - name: Generate key
       run: php artisan key:generate
-    - name: Upgrade chrome driver
-      run: php artisan dusk:chrome-driver
-    - name: Start Chrome Driver
-      run: ./vendor/laravel/dusk/bin/chromedriver-linux --headless --no-sandbox --disable-extensions --disable-dev-shm-usage > /dev/null 2>&1 &
-    - name: Run Laravel Server
-      run: php artisan serve > /dev/null 2>&1 &
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
     - name: Create Database
@@ -29,4 +23,11 @@ jobs:
       env:
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
+    - name: Upgrade chrome driver
+      run: php artisan dusk:chrome-driver
+    - name: Start Chrome Driver
+      run: ./vendor/laravel/dusk/bin/chromedriver-linux --headless --no-sandbox --disable-extensions --disable-dev-shm-usage > /dev/null 2>&1 &
+    - name: Run Laravel Server
+      run: php artisan serve > /dev/null 2>&1 &
+    - name: Execute tests (Unit and Feature tests) via Dusk
       run: php artisan dusk
