--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -23,8 +23,14 @@ jobs:
         touch database/database.sqlite      
     - name: Upgrade chrome driver
       run: php artisan dusk:chrome-driver
-    - name: Start Chrome Driver
-      run: ./vendor/laravel/dusk/bin/chromedriver-linux --headless --no-sandbox --disable-extensions --disable-dev-shm-usage > /dev/null 2>&1 & 
+    - uses: nanasess/setup-chromedriver@master
+      with:
+        # Optional: do not specify to match Chrome's version
+        chromedriver-version: '77.0.3865.40'
+    - run: |
+        export DISPLAY=:99
+        chromedriver --url-base=/wd/hub &
+        sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
     - name: Run Laravel Server
       run: php artisan serve > /dev/null 2>&1 &
     - name: Execute tests (Unit and Feature tests) via Dusk
