--- a/.github/workflows/laraone.yml
+++ b/.github/workflows/laraone.yml
@@ -1,9 +1,9 @@
-name: Laravel
+name: Laraone
 
 on: [push]
 
 jobs:
-  laravel-tests:
+  laraone-tests:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -25,12 +25,12 @@ jobs:
       run: php artisan dusk:chrome-driver
     - uses: nanasess/setup-chromedriver@master
       with:
-        # Optional: do not specify to match Chrome's version
         chromedriver-version: '77.0.3865.40'
     - run: |
         export DISPLAY=:99
         chromedriver --url-base=/wd/hub &
         sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
+    
     - name: Run Laravel Server
       run: APP_URL="http://127.0.0.1:8000" php artisan serve > /dev/null 2>&1 &
     - name: Execute tests (Unit and Feature tests) via Dusk
