--- a/.github/workflows/laraone.yml
+++ b/.github/workflows/laraone.yml
@@ -1,43 +1,24 @@
-name: Laraone
-
+name: CI
 on: [push]
-
 jobs:
-  laraone-tests:
+
+  dusk-php:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-      with:
-        fetch-depth: 1
-    - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
-    - name: Generate key
-      run: php artisan key:generate
-    - name: Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
-    - name: Create Database
-      run: |
-        mkdir -p database
-        touch database/database.sqlite      
-    - name: Upgrade chrome driver
-      run: php artisan dusk:chrome-driver
-    - uses: nanasess/setup-chromedriver@master
-      with:
-        chromedriver-version: '80.0.3987.106'
-    - run: |
-        export DISPLAY=:99
-        chromedriver --url-base=/wd/hub &
-        sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
-    
-    - name: Run Laravel Server
-      env:
-        APP_URL: http://127.0.0.1:8000
-      run: php artisan serve > /dev/null 2>&1 &
-    - name: Execute tests (Unit and Feature tests) via Dusk
-      env:
-        DB_CONNECTION: sqlite
-        DB_DATABASE: database/database.sqlite
-        APP_URL: http://127.0.0.1:8000
-      run: APP_URL="http://127.0.0.1:8000" php artisan dusk
+      - uses: actions/checkout@v1
+      - name: Prepare The Environment
+        run: cp .env.example .env
+      - name: Create Database
+        run: mysql --user="root" --password="root" -e "CREATE DATABASE my-database character set UTF8mb4 collate utf8mb4_bin;"
+      - name: Install Composer Dependencies
+        run: composer install --no-progress --no-suggest --prefer-dist --optimize-autoloader
+      - name: Generate Application Key
+        run: php artisan key:generate
+      - name: Upgrade Chrome Driver
+        run: php artisan dusk:chrome-driver
+      - name: Start Chrome Driver
+        run: ./vendor/laravel/dusk/bin/chromedriver-linux &
+      - name: Run Laravel Server
+        run: php artisan serve &
+      - name: Run Dusk Tests
+        run: php artisan dusk
