--- a/.github/workflows/laraone.yml
+++ b/.github/workflows/laraone.yml
@@ -17,7 +17,13 @@ jobs:
       - name: Upgrade Chrome Driver
         run: php artisan dusk:chrome-driver
       - name: Start Chrome Driver
-        run: ./vendor/laravel/dusk/bin/chromedriver-linux &
+      - uses: nanasess/setup-chromedriver@master
+        with:
+          chromedriver-version: '80.0.3987.106'
+      - run: |
+          export DISPLAY=:99
+          chromedriver --url-base=/wd/hub &
+          sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
       - name: Run Laravel Server
         env:
           DB_PASSWORD: root
