--- a/.github/workflows/laraone.yml
+++ b/.github/workflows/laraone.yml
@@ -33,4 +33,4 @@ jobs:
         env:
           DB_PASSWORD: root
           DB_DATABASE: laraone
-        run: php artisan dusk
+        run: php artisan dusk --debug --verbose
