--- a/.github/workflows/laraone.yml
+++ b/.github/workflows/laraone.yml
@@ -28,9 +28,11 @@ jobs:
         env:
           DB_PASSWORD: root
           DB_DATABASE: laraone
+          APP_URL: http://localhost:8000
         run: php artisan serve &
       - name: Run Dusk Tests
         env:
           DB_PASSWORD: root
           DB_DATABASE: laraone
+          APP_URL: http://localhost:8000
         run: php artisan dusk --debug --verbose
