--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Laraone
 APP_ENV="local"
 APP_KEY=
 APP_DEBUG=true
-APP_URL="http://laraone.test"
+APP_URL="http://localhost:8000"
 
 #ADMIN_USERNAME=admin_username
 #ADMIN_EMAIL=name@example.com
