--- a/.github/workflows/laraone.yml
+++ b/.github/workflows/laraone.yml
@@ -24,6 +24,8 @@ jobs:
           export DISPLAY=:99
           chromedriver --url-base=/wd/hub &
           sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
+      - name: Install Laraone app
+        run: php artisan laraone:install
       - name: Run Laravel Server
         env:
           DB_PASSWORD: root
