--- a/.github/workflows/laraone.yml
+++ b/.github/workflows/laraone.yml
@@ -12,7 +12,8 @@ jobs:
       - name: Prepare The Environment
         run: cp .env.example .env
       - name: Create Database
-        run: mysql --user="root" --password="root" -e "CREATE DATABASE laraone character set UTF8mb4 collate utf8mb4_bin;"
+        run: mysql --user="root" --password="root" -e "CREATE DATABASE laraone character set UTF8mb4 collate utf8mb4_bin;
+                                                       ALTER USER 'root'@'localhost' IDENTIFIED BY 'toor'; FLUSH PRIVILEGES;"
       - name: Install Composer Dependencies
         run: composer install --no-progress --no-suggest --prefer-dist --optimize-autoloader
       - name: Generate Application Key
@@ -28,13 +29,13 @@ jobs:
         run: php artisan laraone:install
       - name: Run Laravel Server
         env:
-          DB_PASSWORD: root
+          DB_PASSWORD: toor
           DB_DATABASE: laraone
           APP_URL: http://localhost:8000
         run: php artisan serve &
       - name: Run Dusk Tests
         env:
-          DB_PASSWORD: root
+          DB_PASSWORD: toor
           DB_DATABASE: laraone
           APP_URL: http://localhost:8000
         run: php artisan dusk --debug --verbose
