--- a/.github/workflows/laraone.yml
+++ b/.github/workflows/laraone.yml
@@ -36,6 +36,11 @@ jobs:
           DB_DATABASE: laraone
           APP_URL: http://127.0.0.1:8000
         run: php artisan serve &
+      
+      - name: curl
+        uses: wei/curl@master
+        with:
+          args: http://127.0.0.1/8000
       - name: Run Dusk Tests
         env:
           DB_PASSWORD: root
