--- a/.github/workflows/laraone.yml
+++ b/.github/workflows/laraone.yml
@@ -36,7 +36,8 @@ jobs:
           DB_DATABASE: laraone
           APP_URL: http://127.0.0.1:8000
         run: php artisan serve &
-      
+      - name: Chrome Version
+        run: google-chrome --version
       - name: curl
         run: curl --location --request GET 'http://127.0.0.1:8000/auth/login'
       - name: Run Dusk Tests
