--- a/.github/workflows/laraone.yml
+++ b/.github/workflows/laraone.yml
@@ -28,10 +28,10 @@ jobs:
           DB_DATABASE: laraone
           APP_URL: http://127.0.0.1:8000
         run: php artisan serve &
-      - name: Chrome Version
-        run: google-chrome --version
-      - name: curl
-        run: curl --location --request GET 'http://127.0.0.1:8000/auth/login'
+      - name: Install maildev server & web interface
+        run: npm install -g maildev
+      - name: Run maildev
+        run: maildev
       - name: Run Dusk Tests
         env:
           DB_PASSWORD: root
