--- a/.github/workflows/laraone.yml
+++ b/.github/workflows/laraone.yml
@@ -39,4 +39,6 @@ jobs:
           DB_PASSWORD: root
           DB_DATABASE: laraone
           APP_URL: http://127.0.0.1:8000
+          MAIL_HOST: localhost
+          MAIL_PORT: 1025
         run: php artisan dusk --debug --verbose
