--- a/.github/workflows/laraone.yml
+++ b/.github/workflows/laraone.yml
@@ -34,6 +34,8 @@ jobs:
         run: sudo npm install -g maildev
       - name: Run maildev
         run: maildev &
+      - name: Curl
+        run: curl --location --request GET 'http://127.0.0.1:1080'
       - name: Run Dusk Tests
         env:
           DB_PASSWORD: root
