--- a/.github/workflows/laraone.yml
+++ b/.github/workflows/laraone.yml
@@ -36,6 +36,8 @@ jobs:
         run: maildev &
       - name: Curl
         run: curl --location --request GET 'http://127.0.0.1:1080'
+      - name: Fix up permissions
+        run: chmod -R 775 public/uploads
       - name: Run Dusk Tests
         env:
           DB_PASSWORD: root
